lambdacube-dsl/tests/reject/instantiate.lc
let f = PrimAdd in (f (V2F 1.0 2.0) (V2F 2.3 3.4), f 1.0 2.0)
